@@ -1,6 +1,6 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2005
-## Free Software Foundation, Inc.
+## Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2001, 2003, 2005,
+## 2008  Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -26,4 +26,4 @@ clean-libtool:
 
 ?TOPDIR_P?distclean-am: distclean-libtool
 ?TOPDIR_P?distclean-libtool:
-?TOPDIR_P?	-rm -f libtool
+?TOPDIR_P?	-rm -f libtool config.lt
