@@ -23,6 +23,9 @@ New in 1.10a:
   - Libtool generic flags are now passed to the install and uninstall
     modes as well.
 
+  - distcheck works with Libtool 2.x even when LT_OUTPUT is used, as
+    config.lt is removed correctly now.
+
 * Languages changes:
 
   - subdir-object mode works now with Fortran (F77, FC, preprocessed
