@@ -1,3 +1,13 @@
+2008-11-11 Charles Wilson  <libtool@cwilson.fastmail.fm>  (tiny change)
+	   Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Cleanup config.lt in case LT_OUTPUT is in use.
+	* lib/am/libtool.am [TOPDIR_P] (distclean-libtool): clean up
+	config.lt as well as libtool.
+	* tests/libtoo11.test: New test.
+	* tests/Makefile.am: Update.
+	* NEWS: Update.
+
 2008-11-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
